# PathOfBuilding-Python

./: .gitattributes  .gitignore  CONTRIBUTING.md  CodeStructure.md  LICENSE.md  Makefile  PathOfBuilding.bat  PathOfBuilding.sh  PoB.ui  README.md  build-ui.py  create_wheel  create_wheel.bat  designer.bat  devel_run  devel_run.bat  devel_run.cmd  format_py  format_py.bat  format_py.cmd  global_variables.py  install_PoB  main.ui  make_diagram  make_diagram.cmd  make_exe  make_exe.cmd  openSuSE.install  pyproject.toml  requirements.txt  run  run.bat  setup.py  simulator.py  todo_notes.txt  ubuntu.install.MD  update_all_pypthon_modules  windows.install  windows.install.md  windows.install.txt
Assets/: PoB.qrc  PoB_Main_Window - 20220720.ui  PoB_Main_Window.ui  compile_qrc  compile_qrc.bat  compile_ui  compile_ui.bat  dlgBuildImport.ui  dlgConfig.ui  dlgCraftItems.ui  dlgExport.ui  dlgImport.ui  dlgManageItems.ui  dlgManageSkills.ui  dlgManageTree.ui  run_designer  test_dark.qss  test_light.qss  test_scroll.ui
docs/: Basic writing and formatting syntax - GitHub Docs.url  Class_Flowchart.vsdx  Installing a font into QTdesigner.docx  Main_Classes_of_PathOfBuilding.odg  Markdown Viewer Online and Markdown Tester Online.url  PoB.puml  Shared Google Folder.url  SpriteMap_keys.txt  code_structure.md  kudos.txt  nodes_with_unusual_orbits.txt  nuitka_help.text  openSuSE.install.md  windows.install.md  windows.install.txt
pob/: main.py
scripts/: convert_skill_data.py  create_wheel  create_wheel.cmd  fetch_character.py  make_diagram  make_diagram.cmd  make_exe  make_exe.cmd  reprocess_base_items_json.py  reprocess_lua_rare_templates_flat.py  reprocess_lua_uniques_flat_xml.py  reprocess_mods_json.py  run_designer  run_designer.cmd
src/: Build.py  Enumerations.py  PathOfBuilding.py  Player.py  PoB.py  PoB_Main_Window.py  PoB_UI.py  PoB_config.py  PoB_xml.py  Tree.py  build.py  calcs_ui.py  config_dialog.py  config_ui.py  constants.py  craft_items_dialog.py  export_dialog.py  flow_layout.py  gem_ui.py  import_dialog.py  item.py  item_slot_ui.py  items_ui.py  listbox.py  manage_tree_dialog.py  mod.py  node.py  notesTab.py  notes_ui.py  player.py  player_stats.py  pob.py  pob2.py  pob_config.py  pob_file.py  pob_main_ui.py  pob_ui.py  pob_xml.py  (+10 more)
(+127 files in other folders)
