[tool.poetry]
name = "pathofbuilding-python"
version = "0.1.0"
description = "Python port of Path of Building"
authors = ["ppoelzl <33464174+ppoelzl@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "^2.26.0"
SLPP = "^1.2.3"
PySide6 = "6.4.1"
PySide6-Addons = "6.4.1"
PySide6-Essentials = "6.4.1"
xmltodict = "0.13.0"
pyqtdarktheme = "2.0.0"
beautifulsoup4 = "^4.11.1"
psutil = "^5.9.1"
luadata = "^1.0.5"
pyperclip = "^1.8.2"
 
[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
