[tool.poetry]
name = "pathofbuilding-python"
version = "0.1.0"
description = "Python port of Path of Building"
authors = ["ppoelzl <33464174+ppoelzl@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.26.0"
SLPP = "^1.2.3"
PySide6 = "^6.6.1"
PySide6-Addons = "^6.6.1"
PySide6-Essentials = "^6.6.1"
xmltodict = "0.13.0"
psutil = "^5.9.8"
luadata = "^1.0.5"
pyperclip = "^1.8.2"
nuitka = "^2.0.2"
 
[tool.poetry.dev-dependencies]
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
# Match pyCharm's width
line-length = '140'
force-exclude = '.*/ui/.*|^/src/PoB_rc.py'
